--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>Idealgewichtsrechner</h2>
         <div>
           <label for="bodyHeight">Körpergröße:</label>
-          <input type="number" placeholder="Gewicht in KG" id="bodyHeight" />
+          <input type="number" placeholder="Größe in cm" id="bodyHeight" />
         </div>
         <div>
           <label for="age">Alter:</label>
